<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgeneric"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="340dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/startimage" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#fff176"
            card_view:cardCornerRadius="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="259dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bk1que" />

                <TextView
                    android:id="@+id/question_1_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="26dp"
                    android:layout_marginTop="26dp"
                    android:text="@string/question1"
                    android:textColor="#000000"
                    android:textSize="@dimen/question_text_view"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question_1_textView">

                    <RadioButton
                        android:id="@+id/option1_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/question1option1"
                        android:textColor="#000000"
                        android:textSize="@dimen/options_text_view" />

                    <RadioButton
                        android:id="@+id/option2_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/question1option2"
                        android:textColor="#000000"
                        android:textSize="@dimen/options_text_view" />

                    <RadioButton
                        android:id="@+id/option3_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="26dp"
                        android:text="@string/question1option3"
                        android:textColor="#000000"
                        android:textSize="@dimen/options_text_view" />

                </RadioGroup>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="#aed581"
            card_view:cardCornerRadius="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="250dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bk2que" />

                <TextView
                    android:id="@+id/question_2_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="26dp"
                    android:layout_marginTop="26dp"
                    android:text="@string/question2"
                    android:textColor="#000000"
                    android:textSize="@dimen/question_text_view"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question_2_textView">

                    <RadioButton
                        android:id="@+id/optionQ2_1_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/question2option1"
                        android:textColor="#000000"
                        android:textSize="@dimen/options_text_view" />

                    <RadioButton
                        android:id="@+id/optionQ2_2_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/question2option2"
                        android:textColor="#000000"
                        android:textSize="@dimen/options_text_view" />

                    <RadioButton
                        android:id="@+id/optionQ2_3_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="26dp"
                        android:text="@string/question2option3"
                        android:textColor="#000000"
                        android:textSize="@dimen/options_text_view" />

                </RadioGroup>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#78b6fb"
            card_view:cardCornerRadius="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="268dp"
                    android:layout_height="270dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/bk3que" />

                <TextView
                    android:id="@+id/question_3_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="26dp"
                    android:layout_marginTop="26dp"
                    android:text="@string/question3"
                    android:textColor="#000000"
                    android:textSize="@dimen/question_text_view"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question_3_textView">

                    <CheckBox
                        android:id="@+id/optionQ3_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/question3option1"
                        android:textColor="#000000"
                        android:textSize="@dimen/options_text_view" />

                    <CheckBox
                        android:id="@+id/optionQ3_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/question3option2"
                        android:textColor="#000000"
                        android:textSize="@dimen/options_text_view" />

                    <CheckBox
                        android:id="@+id/optionQ3_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="26dp"
                        android:text="@string/question3option3"
                        android:textColor="#000000"
                        android:textSize="@dimen/options_text_view" />

                </RadioGroup>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="#fb78a6"
            card_view:cardCornerRadius="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp">

                <ImageView
                    android:layout_width="310dp"
                    android:layout_height="250dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/bk4que" />

                <TextView
                    android:id="@+id/question_4_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="58dp"
                    android:layout_marginTop="26dp"
                    android:text="@string/question4"
                    android:textColor="#000000"
                    android:textSize="@dimen/question_text_view"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/question_4_editText"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_below="@id/question_4_textView"
                    android:layout_marginRight="10dp"
                    android:inputType="textCapWords"
                    android:textColor="#000000"
                    android:textSize="@dimen/options_text_view" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/submit_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="103dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@drawable/submit"
            android:onClick="submitResult" />

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sumitButton"
            android:textColor="#FFFF"
            android:textSize="@dimen/score"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
